kustomize/pwa/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: newsgradient-pwa
  labels:
    app: newsgradient-pwa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: newsgradient-pwa
  template:
    metadata:
      labels:
        app: newsgradient-pwa
    spec:
      containers:
      - name: newsgradient-pwa
        image: newsgradient-pwa # kustomize thing
        command:
          - yarn
          - start
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
        livenessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 10
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 15
          periodSeconds: 30
          timeoutSeconds: 5
        resources:
          requests:
            memory: 200Mi
            cpu: 20m
          limits:
            memory: 300Mi
            cpu: 200m
