kustomize/pwa/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: newsgradient-pwa
spec:
  selector:
    app: newsgradient-pwa
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
