kustomize/pwa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: newsgradient-pwa
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - newsgradient-pwa.danesjenovdan.si
    secretName: newsgradient-pwa-tls
  rules:
  - host: newsgradient-pwa.danesjenovdan.si
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: newsgradient-pwa
            port:
              number: 80
